--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href="./download.txt"> Dowload Excursion (Coming Soon!) </a>
 <br>
 <br>
-<video controls autoplay="autoplay">
+<video autoplay="autoplay">
   <source src="./resources/media/excursion.mp4" type="video/mp4"/>
 Video Not Supported
  </video>
