final final: fixed image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Video Not Supported
 <br>
 <img src="./resources/media/camp.jpg" alt="Lit up tent in the desert">
 <br>
-<img src=".resources/media/phone.png" alt="Small smartphone image">
+<img src="./resources/media/phone.png" alt="Small smartphone image">
   <h4> Coming soon for iPhone and Android </h4>
 <a href="./download.txt"> Dowload Excursion (Coming Soon!) </a>
   <h5> &copy; Excursion </h5>
